--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
              <version>2.48.2</version>
          </dependency>
 
+         <dependency>
+             <groupId>org.apache.poi</groupId>
+             <artifactId>poi</artifactId>
+             <version>3.13</version>
+         </dependency>
+
 
      </dependencies>
     </dependencyManagement>
