--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
          <dependency>
              <groupId>org.apache.poi</groupId>
              <artifactId>poi</artifactId>
-             <version>3.13</version>
+             <version>3.14-beta1</version>
          </dependency>
 
 
