--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,39 @@
      </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>all</id>
+            <modules>
+                <module>Generic</module>
+                <module>CNN</module>
+                <module>Amazon</module>
+                <module>Ebay</module>
+            </modules>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+
+        <profile>
+            <id>CnnApp</id>
+            <modules>
+              <module>Generic</module>
+              <module>CNN</module>
+            </modules>
+        </profile>
+
+        <profile>
+            <id>AmazonApp</id>
+            <modules>
+                <module>Generic</module>
+                <module>Amazon</module>
+            </modules>
+        </profile>
+
+
+    </profiles>
+
 
 
 </project>
